Fix hardcoded localhost URLs for production deployment

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # Production environment variables
 VITE_APP_TITLE=iShop
-VITE_API_URL=https://api.yourdomain.com
+VITE_API_URL=/api
 VITE_PORT=5173
 VITE_ENABLE_DEVTOOLS=false
 VITE_LOG_LEVEL=error
