--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ python-dotenv==1.0.0
 email-validator==2.2.0
 phonenumbers==8.13.25
 pandas==2.1.3
+openpyxl==3.1.2  # Excel file support for pandas
 
 # Image Processing (Optional)
 Pillow==10.1.0
@@ -75,6 +76,9 @@ structlog==23.2.0
 # Additional utilities
 python-slugify==8.0.1
 pytz==2023.3
+
+# Telegram Bot Integration
+python-telegram-bot==20.7
 
 # Development dependencies (install separately in dev)
 # black==23.11.0
