--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "dev": "vite --host 0.0.0.0 --port 5173",
     "build": "tsc && vite build",
     "preview": "vite preview --port 5173",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "type-check": "tsc --noEmit",
@@ -27,7 +24,7 @@
     "quality:fix": "npm run lint:fix && npm run format && npm run type-check",
     "clean": "rm -rf dist node_modules/.vite",
     "analyze": "npm run build && npx vite-bundle-analyzer dist/stats.json",
-    "pre-commit": "npm run quality && npm run test:run"
+    "pre-commit": "npm run quality"
   },
   "keywords": [
     "ecommerce",
@@ -76,9 +73,6 @@
     "vite": "^7.1.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.51.0",
@@ -86,7 +80,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "prettier": "^3.0.3",
-    "terser": "^5.43.1",
-    "vitest": "^0.34.0"
+    "terser": "^5.43.1"
   }
 }
